--- a/package.json
+++ b/package.json
@@ -7,21 +7,67 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.0",
+    "@expo/vector-icons": "^12.0.5",
+    "@hookform/resolvers": "^2.8.2",
+    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "@types/styled-components-react-native": "^5.1.1",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "date-fns": "^2.25.0",
     "expo": "~42.0.1",
+    "expo-app-loading": "1.1.2",
+    "expo-apple-authentication": "~3.2.1",
+    "expo-auth-session": "~3.3.1",
+    "expo-camera": "^11.2.2",
+    "expo-font": "~9.2.1",
+    "expo-media-library": "~12.1.2",
+    "expo-permissions": "~12.1.1",
+    "expo-random": "~11.2.0",
+    "expo-screen-orientation": "~3.3.0",
+    "expo-sharing": "~9.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.17.5",
     "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "0.14.10",
-    "react-native-web": "~0.13.12"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.1",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
