--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo/vector-icons": "^12.0.5",
+    "@gorhom/bottom-sheet": "^4",
     "@hookform/resolvers": "^2.8.2",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-navigation/bottom-tabs": "^6.0.9",
