--- a/app.json
+++ b/app.json
@@ -6,7 +6,11 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#000000"
+    }
   },
   "name": "promakerapp"
 }
