--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@hookform/resolvers": "^2.8.2",
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-community/slider": "^4.1.12",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/core": "^6.1.0",
     "@react-navigation/native": "^6.0.6",
@@ -41,6 +42,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-redash": "^16.2.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
